# resume_agent

./: .env  .env.example  .gitignore  MEMORY_DEV_PROGRESS.md  MEMORY_FILE_BASED_DESIGN.md  MEMORY_REARCHITECTURE_DESIGN_2026-04-27.md  MESSAGE_RENDER_PROTOCOL_DESIGN_2026-04-24.md  MULTI_AGENT_PREP_DESIGN.md  README.md  RUNTIME_STREAMING_TOOLLOOP_ISSUES_2026-04-23.md  agent开发文档.md  docker-compose.yml  pubspec.yaml  pyproject.toml  开发文档.md
alembic/: env.py
alembic/versions/: 20260416_0001_initial_schema.py  20260417_0002_async_task_runtime.py
app/: __init__.py  main.py
app/agents/: context_store.py  execution_modes.py  main_agent.py  runtime.py
app/api/: __init__.py  chat.py  deps.py
app/application/: task_worker.py
app/config/: agent_capabilities.json
app/core/: __init__.py  errors.py  logging.py  settings.py
app/domain/: __init__.py  models.py  protocols.py
app/infra/: __init__.py
app/memory/: __init__.py  admission.py  backfill_cli.py  classification.py  consolidation.py  contracts.py  facade.py  intake.py  lifecycle.py  metadata_refresh.py  models.py  policies.py  retrieval.py
app/runtime/: __init__.py  agent_capability.py  agent_runtime.py  context_assembler.py  event_channel.py  event_recorder.py  memory_manager.py  session_manager.py
app/schemas/: __init__.py  chat.py
app/services/: __init__.py  answer_normalizer.py  chat_service.py  session_title_service.py
app/skills/: base.md  memory.md  (+1 more)
flutter_app/: .metadata  README.md  pubspec.yaml
test/: widget_test.dart
tests/: conftest.py  helpers.py  test_agent_runtime.py  test_answer_normalizer.py  test_chat_api.py  test_chat_service.py  test_context_assembler.py  test_memory_admission.py  test_memory_classification.py  test_memory_compaction.py  test_memory_consolidation.py  test_memory_manager.py  test_memory_structured_backfill.py  test_multi_agent_contracts.py  test_openai_compatible_client_stream.py  test_state_manager.py  test_storage.py  test_tool_registry.py
web/: index.html  manifest.json
(+206 files in other folders)
